--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile.jpg" class="img-fluid" alt="">
+            <img src="profile.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Web Developer</h3>
@@ -288,19 +288,19 @@ I am a highly skilled web developer specializing in Java, PHP, and WordPress. Wi
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4 class="mb-3"><i class="bx bxs-graduation" style="font-size: 25px;"></i>&emsp;B.E - COMPUTER SCIENCE ENGINEERING</h4>
-              <a href="https://saveethaengineering.com/" target="_blank"><img src="assets/img/su-sse.jpg" style="height: 50px; width: 230px;" alt=""></a><h5>2017 - 2021</h5>
+              <a href="https://saveethaengineering.com/" target="_blank"><img src="su-sse.jpg" style="height: 50px; width: 230px;" alt=""></a><h5>2017 - 2021</h5>
               <p class="mt-2"><em>Saveetha School Of Engineering, Saveetha University (SIMATS), Chennai, TamilNadu, INDIA-602105.</em></p>
               <p style="text-align: justify;">I have completed my BE.CSE(2017-21) in Saveetha School Of Engineering(SSE) deemed to be University in <b>SAVEETHA UNIVERSITY (SIMATS)</b>, Chennai, TamilNadu, INDIA-602105.</p>
             </div>
             <div class="resume-item">
               <h4 class="mb-3"><i class="bx bx-medal" style="font-size: 25px;"></i>&emsp;12th | High School</h4>
-              <a href="https://srichaitanya.net/" target="_blank"><img src="assets/img/sc-logo.jpg" style="height: 50px; width: 200px;" alt=""></a><h5>2015 - 2017</h5>
+              <a href="https://srichaitanya.net/" target="_blank"><img src="sc-logo.jpg" style="height: 50px; width: 200px;" alt=""></a><h5>2015 - 2017</h5>
               <p class="mt-2"><em>Sri Chaitanya College, Tirupati, AndhraPradesh, India-517502</em></p>
               <p>I have completed my 11th &amp; 12th Schooling(2015-17) in <b>Sri Chaitanya College</b>, Tirupati, AndhraPradesh, India-517502</p>
             </div>
             <div class="resume-item">
               <h4 class="mb-3"><i class="bx bx-book" style="font-size: 25px;"></i>&emsp;10th | Secondary School</h4>
-              <a href="https://keshavareddy.edu.in/" target="_blank"><img src="assets/img/krcs-logo.jpg" style="height: 70px; width: 200px;" alt=""></a><h5>2004 - 2015</h5>
+              <a href="https://keshavareddy.edu.in/" target="_blank"><img src="krcs-logo.jpg" style="height: 70px; width: 200px;" alt=""></a><h5>2004 - 2015</h5>
               <p class="mt-2"><em>Keshava Reddy School, Tirupati, AndhraPradesh, India-517502</em></p>
               <p>I have completed my 10th Schooling(2004-15) in <b>Keshava Reddy School</b>, Tirupati, AndhraPradesh, India-517502</p>
             </div>
@@ -309,7 +309,7 @@ I am a highly skilled web developer specializing in Java, PHP, and WordPress. Wi
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4><i class="bx bx-briefcase" style="font-size: 25px;"></i>&emsp;FullStack Web Developer</h4>
-              <a href="https://sunseaz.com/" target="_blank"><img src="assets/img/sunseaz.jpeg" style="height: 50px; width: 180px;" alt=""></a><h5>2023 - Present</h5>
+              <a href="https://sunseaz.com/" target="_blank"><img src="sunseaz.jpeg" style="height: 50px; width: 180px;" alt=""></a><h5>2023 - Present</h5>
               <p><em>SUNSEAZ TECHNOLOGIES, HYDERABAD, TELANGANA, INDIA.</em></p>
               <ul>
                 <li>Take charge of designing, developing, and implementing visually appealing and effective graphic, layout, and production communication materials.</li>
@@ -385,12 +385,12 @@ I am a highly skilled web developer specializing in Java, PHP, and WordPress. Wi
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/pf-2.png" class="img-fluid" alt="">
+              <img src="pf-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Web</h4>
                 <p>Web App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/pf-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="pf-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                   <a href="https://apsrkpuram.edu.in/" target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -607,7 +607,7 @@ I am a highly skilled web developer specializing in Java, PHP, and WordPress. Wi
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/tm-1.jpg" class="testimonial-img" alt="">
+                <img src="tm-1.jpg" class="testimonial-img" alt="">
                 <h3>Sravan Kumar U</h3>
                 <h4>Senior Analyst - Capgemini</h4>
                 <p>
@@ -620,7 +620,7 @@ I am a highly skilled web developer specializing in Java, PHP, and WordPress. Wi
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/tm-2.jpg" class="testimonial-img" alt="">
+                <img src="tm-2.jpg" class="testimonial-img" alt="">
                 <h3>Sanjeeb Kumar sahoo</h3>
                 <h4>Web Developer - Sunseaz</h4>
                 <p>
@@ -633,7 +633,7 @@ I am a highly skilled web developer specializing in Java, PHP, and WordPress. Wi
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/tm-3.jpg" class="testimonial-img" alt="">
+                <img src="tm-3.jpg" class="testimonial-img" alt="">
                 <h3>Jibrail Shaikh</h3>
                 <h4>Graphic & Web Designer</h4>
                 <p>
@@ -646,7 +646,7 @@ I am a highly skilled web developer specializing in Java, PHP, and WordPress. Wi
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/tm-4.jpg" class="testimonial-img" alt="">
+                <img src="tm-4.jpg" class="testimonial-img" alt="">
                 <h3>Mohith Reddy A</h3>
                 <h4>Freelancer</h4>
                 <p>
@@ -659,7 +659,7 @@ I am a highly skilled web developer specializing in Java, PHP, and WordPress. Wi
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/tm-5.jpg" class="testimonial-img" alt="">
+                <img src="tm-5.jpg" class="testimonial-img" alt="">
                 <h3>Lokesh Reddy Akepati</h3>
                 <h4>Entrepreneur</h4>
                 <p>
